@@ -1752,3 +1752,10 @@
 	  information about RGMP.
 	* lib/stdio/lib_fclose.c: Must flush all buffered data when the file is closed.
 	  Instead, it was discarding the buffered data.
+	* lib/stdio: All output stream logic was modified to support CONFIG_STDIO_LINEBUFFER.
+	  If standard C buffered I/O is enabled (CONFIG_STDIO_BUFFER_SIZE > 0), then this
+	  option may be added to force automatic, line-oriented flushing the output buffer
+	  for printf() fprintf(), and vfprintf().  When a newline is encountered in the
+	  format string, the output buffer will be  flushed.  This (slightly) increases
+	  the NuttX footprint but supports the kind of behavior that people expect for
+	  printf.
